// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should match its "blueLine" theme snapshot 1`] = `
<input
  className="sc-bdVaJa khiFTh"
  type="text"
/>
`;

exports[`<TextInput /> should match its "mapSearch" theme snapshot 1`] = `
<input
  className="sc-bdVaJa euRxdZ"
  type="text"
/>
`;

exports[`<TextInput /> should match its "refineList" theme snapshot 1`] = `
<input
  className="sc-bdVaJa jhWEXd"
  type="text"
/>
`;

exports[`<TextInput /> should match its empty snapshot 1`] = `
<input
  className="sc-bdVaJa hLUzGS"
  type="text"
/>
`;
